--- a/www/public/resources/styles/stats-hosts.css
+++ b/www/public/resources/styles/stats-hosts.css
@@ -351,11 +351,13 @@
     z-index: 10;
 }
 
-.showEventDetailsBtn:hover span.showEventDetails {
+.showEventDetailsBtn:hover span.showEventDetails,
+.hosts-charts-list-label-hosts-list:hover span.showEventDetails
+{
     display: inline-block;
 }
 
-.showEventDetails {
+.showEventDetails, .hosts-charts-list-label-hosts-list {
     display: none;
     position: absolute;
     z-index: 1; /* Pour que le bloc s'affiche au dessus des autres et ne soit pas à moitié masqué */
@@ -367,6 +369,10 @@
     background-color: #112334;
     -webkit-box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgba(0,0,0,0.15);
     box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgb(0 0 0 / 15%);
+}
+.hosts-charts-list-label-hosts-list {
+    margin-top: 15px;
+    margin-left: 100px;
 }
 
 /* Timeline de l'historique d'un paquet
