--- a/www/public/resources/styles/main.css
+++ b/www/public/resources/styles/main.css
@@ -1,13 +1,15 @@
 @font-face{ font-family: 'ethnocentric'; src: url('../fonts/ethnocentric rg.ttf') format('truetype'); }
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-/* Color picker
-
-    https://www.w3schools.com/colors/colors_picker.asp?colorhex=182b3e
-
-*/
+/**
+ *  Color picker
+ *  https://www.w3schools.com/colors/colors_picker.asp?colorhex=182b3e
+ */
 
 body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     /**
      *  'fade-in' mode on every page
      *  See @keyframes fadeInAnimation below
@@ -21,6 +23,7 @@ body {
     background-color: #112334;
     color: white;
     overflow-y: auto;
+    font-size: 13px;
 }
 
 @keyframes fadeInAnimation {
@@ -52,7 +55,6 @@ p, label, a, i, span {
 
 span {
     line-height: inherit !important;
-    /* vertical-align: middle; */
 }
 
 b, strong {
@@ -454,7 +456,7 @@ table {
     background-color: #1d3349;
     border: 1px solid #24405c;
     border-radius: 4px;
-    padding: 15px 4px 4px 4px;
+    padding: 15px 4px 15px 4px;
     box-shadow: rgb(0 0 0) 0px 10px 13px -12px, rgb(0 0 0 / 15%) 0px 0px 10px 2px;
 }
 
@@ -478,19 +480,15 @@ table {
 
 .item-repo {
     font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    row-gap: 6px;
-    align-items: flex-start;
 }
 
 .item-pkgtype {
     display: flex;
     align-items: center;
     column-gap: 3px;
+    position: absolute !important;
     padding: 1.5px 2px 1.5px 2px !important;
-    vertical-align: middle;
+    margin-top: 5px;
     border-radius: 4px;
 }
 .item-pkgtype span {
@@ -509,6 +507,7 @@ table {
 .item-empty-line {
     grid-column-start: 1;
     grid-column-end: -1;
+    padding: 10px 0 10px 0 !important;
 }
 
 .item-checkbox input[type=checkbox] {
@@ -518,7 +517,7 @@ table {
     visibility: hidden;
 }
 
-.item-date, .item-arrow, .item-checkbox, .item-env {
+.item-arrow, .item-checkbox, .item-env {
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
@@ -533,23 +532,23 @@ table {
 .item-arrow span {
     width: 100%;
     position: absolute;
-    top: 4px;
-    border-top: 1px solid white;
+    top: 3px;
+    border-top: 1px solid #ffffff6b;
 }
 
 .item-arrow-up span {
     position: absolute;
-    top: -44px;
-    height: 56px;
+    top: -26px;
+    height: 36px;
     width: 18px;
-    border-left: 1px solid white;
-    border-bottom: 1px solid white;
+    border-left: 1px solid #ffffff6b;
+    border-bottom: 1px solid #ffffff6b;
     border-bottom-left-radius: 4px;
 }
 
 .item-env {
     min-width: 40px;
-    padding: 2px 0 0 0 !important;
+    padding: 1px 0 0 0 !important;
 }
 
 .item-dist-section-sub {
@@ -575,17 +574,21 @@ table {
 }
 
 .item-snapshot {
-    max-width: 82px;
+    width: 85px;
     padding: 0 0 0 0 !important;
 }
 
+.item-date {
+    padding: 0 !important;
+}
+
 .item-date span {
+    display: block;
+    width: 100%;
+    text-align: center;
     font-size: 12px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    vertical-align: middle;
+    padding-top: 4px;
+    padding-bottom: 4px;
     border-radius: 2px;
     background-color: #333333;
     color: white;
@@ -594,12 +597,12 @@ table {
 
 .item-info {
     max-width: 100%;
-    height: 30px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     align-content: flex-start;
-    padding: 4px 0 0 2px !important;
+    justify-content: center;
+    padding: 5px 0 0 2px !important;
     position: inherit !important;
 }
 
@@ -625,6 +628,7 @@ table {
 
 .item-desc [type=text] {
     background-color: #1d3349;
+    height: 20px !important;
 }
 
 .item-desc [type=text]::placeholder {
@@ -1090,8 +1094,10 @@ textarea {
 }
 
 footer {
+    width: 100%;
     height: 400px;
-    margin-top: 100px;
+    flex-grow: 1;
+    margin-top: 200px;
     padding-top: 50px;
     box-shadow:
      0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
@@ -1099,6 +1105,7 @@ footer {
     background-color:#182b3e;
     text-align: center;
 }
+
 footer p {
     color: gray;
 }
