--- a/www/public/resources/styles/common.css
+++ b/www/public/resources/styles/common.css
@@ -114,13 +114,17 @@ pre {
 .flex-div-33 { flex: 0 0 32%; }.flex-div-40 { flex: 0 0 39%; }.flex-div-50 { flex: 0 0 47%; }.flex-div-60 { flex: 0 0 59%; }
 .flex-div-65 { flex: 0 0 64%; }.flex-div-68 { flex: 0 0 67%; }.flex-div-80 { flex: 0 0 79%; }.flex-div-100 { flex: 0 0 98%; }
 .flex-grow { flex-grow: 1; }
+.flex-wrap { flex-wrap: wrap; }
+.flex-nowrap { flex-wrap: nowrap; }
 .flex-direction-column {flex-direction: column}
 .grid {display: grid}
 .grid-2 {grid-template-columns: auto auto}
 .justify-center {justify-content: center}
 .justify-space-between {justify-content: space-between}
 .align-content-center {align-content: center}
+.align-content-right {align-content: flex-end}
 .align-item-center {align-items: center}
+.align-item-right {align-items: flex-end}
 .align-self-center {align-self: center}
 .column-gap-1 {column-gap: 1px;}.column-gap-2 {column-gap: 2px;}.column-gap-4 {column-gap: 4px;}.column-gap-5 {column-gap: 5px;}.column-gap-6 {column-gap: 6px;}.column-gap-7 {column-gap: 7px;}.column-gap-8 {column-gap: 8px;}.column-gap-9 {column-gap: 9px;}.column-gap-10 {column-gap: 10px;}
 .row-gap-1 {row-gap: 1px;}.row-gap-2 {row-gap: 2px;}.row-gap-4 {row-gap: 4px;}.row-gap-5 {row-gap: 5px;}.row-gap-6 {row-gap: 6px;}.row-gap-7 {row-gap: 7px;}
