--- a/www/public/resources/styles/stats-hosts.css
+++ b/www/public/resources/styles/stats-hosts.css
@@ -284,7 +284,7 @@
 
 .hosts-charts-list-column-container {
     column-count: 2;
-    column-fill: auto;
+    /* column-fill: auto; */
     height: 90%;
 }
 
