--- a/www/public/resources/styles/main.css
+++ b/www/public/resources/styles/main.css
@@ -1119,16 +1119,18 @@ textarea {
 }
 
 footer {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: auto;
     height: 400px;
     flex-grow: 1;
     margin-top: 200px;
-    padding-top: 50px;
+    padding: 50px 15px 50px 15px;
     box-shadow:
      0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
      0px 2px 2px 0px rgba(109, 109, 109, 0.2);
     background-color:#182b3e;
-    text-align: center;
 }
 
 footer p {
