--- a/www/public/resources/styles/stats-hosts.css
+++ b/www/public/resources/styles/stats-hosts.css
@@ -286,7 +286,7 @@
 .hosts-charts-list-column-container {
     column-count: 2;
     /* column-fill: auto; */
-    height: 90%;
+    /* height: 90%; */
 }
 
 .hosts-charts-list-container {
@@ -332,6 +332,17 @@
     max-height: 220px;
 }
 
+#hosts-requiring-reboot-chart {
+    position: relative;
+    height: 150px;
+}
+#hosts-requiring-reboot-chart p {
+    font-size: 35px;
+}
+#hosts-requiring-reboot-chart:hover #hosts-requiring-reboot-chart-list {
+    display: block;
+}
+
 #packagesContainer, #eventsContainer {
     position: relative;
 }
@@ -355,7 +366,7 @@
     display: inline-block;
 }
 
-.showEventDetails, .hosts-charts-list-label-hosts-list {
+.showEventDetails, .hosts-charts-list-label-hosts-list, #hosts-requiring-reboot-chart-list {
     display: none;
     position: absolute;
     z-index: 5; /* Pour que le bloc s'affiche au dessus des autres et ne soit pas à moitié masqué */
@@ -371,10 +382,12 @@
 .showEventDetails p {
     margin-bottom: 5px;
 }
-
 .hosts-charts-list-label-hosts-list {
     margin-top: 15px;
     margin-left: 100px;
+}
+#hosts-requiring-reboot-chart-list {
+    top: 100px;
 }
 
 /* Timeline de l'historique d'un paquet
